adding cell spacing to achievements table

--- a/Achievements.html
+++ b/Achievements.html
@@ -11,7 +11,7 @@
         <li><h3>Acadmics</h3>
             <ol>
             <li><h4>College</h4>
-            <table>
+            <table cellspacing="10">
                 <thead>
                     <tr>
                     <th>Semester</th>
@@ -30,7 +30,7 @@
                 </tbody>
             </table>
             </li><li><h4>School</h4>
-            <table>
+            <table cellspacing="10">
                 <thead>
                     <tr>
                     <th>Class</th>
